@@ -26,8 +26,8 @@
 (when (require 'package nil 'noerror)
   ;; (add-to-list 'package-archives
   ;;              '("marmalade" . "https://marmalade-repo.org/packages/"))
-  ;; (add-to-list 'package-archives
-  ;;              '("melpa-stable" . "http://stable.melpa.org/packages/"))
+  (add-to-list 'package-archives
+               '("melpa-stable" . "http://stable.melpa.org/packages/"))
   (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/")))
 
 (defun compile-all-packages ()
